# phisaver-api-demo

./: .env.example  .gitignore  CHEATSHEET.md  Containerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  schema.yml
examples/httpie/: README.md
examples/httpx/: 01_authenticate.py  02_list_devices.py  03_get_energy_data.py
examples/phisaver-client/: 01_authenticate.py  02_list_devices.py  03_get_energy_data.py  10_authenticate_alternative.py  README.md
